deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  labels:
    app: sample-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-deployment
  template:
    metadata:
      labels:
        app: sample-deployment   
    spec:
     containers:
      - name: sample-deployment
        image: hdfc_ibps5userinstanceejb:sp2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
     imagePullSecrets:
      - name: regcred
