pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-svc
spec:
  type: LoadBalancer
  selector:
    app: sample-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  labels:
    app: sample-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-deployment
  template:
    metadata:
      labels:
        app: sample-deployment  
   spec:
     containers:
      - name: sample-deployment1
        image: hdfc_ibpsportal:alpine-openjdk
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
